# viewer-tk

./: .gitignore  README.md  image-viewer.py  pyproject.toml  requirements.txt  viewer.py
.github/workflows/: ci.yml
docs/: ROADMAP.md
tests/: README.md  test_controller.py  test_dicom.py  test_image.py  test_nifti.py  test_normalization.py
viewer/: __main__.py  app.py
viewer/controllers/: viewer.py
viewer/models/: base.py  dicom.py  nifti.py
viewer/utils/: image.py  normalization.py  prefs.py  recent.py  strings.py  theme.py
viewer/views/: canvas.py  histogram.py  info_bar.py  menubar.py  metadata.py  multi_canvas.py  toolbar.py
